fix save entity
